overflow fix

--- a/res/popup.css
+++ b/res/popup.css
@@ -8,7 +8,7 @@ iframe#gptframe{
     margin:0px;
 }
 iframe#gptframe, body, html{
-    width: 500px; height: 500px; overflow: hidden;
+    width: 500px; height: 500px; overflow: visible;
 }
 #header{
 	box-sizing: content-box;
